--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -15,6 +15,10 @@
         <!-- Code Coverage -->
         <PackageVersion Include="coverlet.collector" Version="6.0.4" />
 
+        <!-- Source Generator -->
+        <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.13.0" />
+        <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" />
+
         <!-- Versioning -->
         <PackageVersion Include="Nerdbank.GitVersioning" Version="3.9.50" />
 
